--- a/Script for testing.ipynb
+++ b/Script for testing.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -40,16 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Features:\n",
-    "country\n",
-    "price\n",
-    "level 1 category\n",
-    "level 2 category\n",
-    "title keyword density\n",
-    "title length\n",
-    "has duplicate tokens\n",
-    "sum of tf-idf values per title\n",
-    "average tf-idf value\n"
+    "# Functions"
    ]
   },
   {
@@ -158,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -167,6 +172,13 @@
    "source": [
     "df_train = pd.read_csv(filepath_or_buffer='data/training/data_train.csv', \n",
     "                 names=['country','sku_id','title','category_lvl_1','category_lvl_2','category_lvl_3','short_description','price','product_type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute Features"
    ]
   },
   {
@@ -249,6 +261,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assemble Feature Matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -281,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict Clarity"
+    "# Evaluate Clarity model on training set"
    ]
   },
   {
@@ -308,6 +327,13 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "print(\"Model RMSE: %f\" % mean_squared_error(model.predict_proba(X_test)[:,1], y_test)**0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare Submission for Clarity Validation"
    ]
   },
   {
@@ -402,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict Conciseness"
+    "# Evaluate Conciseness Model on Training Set"
    ]
   },
   {
@@ -435,6 +461,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare Submission for Conciseness Validation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -456,6 +489,13 @@
     "\n",
     "predicted_results = model.predict_proba(X_valid)[:, 1]\n",
     "write_submission('conciseness_valid.predict', predicted_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zip Submission Files"
    ]
   },
   {
